# shadowenv

./: .gitignore  .gitmodules  .rubocop.yml  .shadowenv  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  TODO.md  build.rs  default.nix  dev.yml  shadowenv.fish  shadowenv.sh
.github/workflows/: jekyll-gh-pages.yml  release.yml  rust.yml  test.yml
.shadowenv.d/: .gitignore  090_default.scm  trust-f46d09b9
docs/: _config.yml  best-practices.md  config.toml  dev.yml  getting-started.md  index.html  index.md  index.xml  integration.md  shadowlisp.md  sitemap.xml  trust.md
docs/categories/: index.xml
docs/content/: language.md
docs/doks-theme/_includes/: site-head.html
docs/doks-theme/_layouts/: default.html  homepage.html
docs/public/: 404.html  language
docs/slate/stylesheets/: screen.css
docs/tags/: index.xml
docsrc/content/: language.md
lib/: shadowenv.rb
lib/shadowenv/: env.rb  export_formatter.rb  lang.rb  runner.rb  serialize.rb  version.rb
lib/shadowenv/lang/: eval.rb  frame.rb  lib.rb  loop.rb  read.rb
man/man1/: shadowenv.1
man/man5/: shadowlisp.5
sh/: README.md  hookbook.sh  shadowenv.bash.in  shadowenv.fish  shadowenv.fish.in  shadowenv.nu.in  shadowenv.nushell.in  shadowenv.xonsh.in  shadowenv.zsh  shadowenv.zsh.in
sh/hookbook/: hookbook.fish
src/: assimilate.rs  box.rs  box_operation.rs  changes.rs  cli.rs  diff.rs  ejson.rs  exec.rs  exec_cmd.rs  execcmd.rs  execcmd_test.rs  features.rs  hash.rs  hook.rs  init.rs  json_path.rs  lang.rs  loader.rs  main.rs  output.rs  prompt_widget.rs  shadowenv.rs  show.rs  tests.rs  trust.rs  undo.rs
test/: shadowenv_test.rb  test_helper.rb
tests/fixtures/simple/: 550_dev_ruby.lisp  585_dev_rust.lisp  not_lisp.txt
