[package]
name = "shadowenv"
version = "3.0.1"
authors = [
    "Shopify Engineering <careers@shopify.com>",
]
edition = "2021"

[dependencies]
blake2 = "0.10.6"
clap = "2.32.0"
dirs = "5.0.1"
exec = "0.3.1"
anyhow = "1.0.89"
thiserror = "1.0.64"
hex = "0.4.3"
ketos = "0.12"
ketos_derive = "0.12"
libc = "0.2.48"
regex = "1.11.0"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
shell-escape = "0.1.4"
shellexpand = "3.1.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
ed25519 = "2.2.3"
rand = "0.8.5"

[build-dependencies]
clap = "2.32.0"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tempfile = "3.13.0"
