[package]
name = "shadowenv"
version = "3.0.3"
authors = ["Shopify Engineering <careers@shopify.com>"]
edition = "2021"

[dependencies]
blake2 = "0.10.6"
clap = { version = "4.5.20", features = ["cargo", "derive"] }
clap_complete = "4.5.38"
dirs = "5.0.1"
exec = "0.3.1"
anyhow = "1.0.94"
thiserror = "1.0.64"
hex = "0.4.3"
ketos = "0.12"
ketos_derive = "0.12"
libc = "0.2.168"
regex = "1.11.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_derive = "1.6.210"
shell-escape = "0.1.4"
shellexpand = "3.1.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
ed25519 = "2.2.3"
rand = "0.8.5"
nom = "7"
crypto_box = "0.9.1"
base64 = "0.22.1"

[build-dependencies]
clap = { version = "4.5.20", features = ["cargo", "derive"] }
clap_complete = "4.5.35"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tempfile = "3.14.0"
