[package]
name = "shadowenv"
version = "3.5.0"
authors = [
    "Shopify Engineering <careers@shopify.com>",
]
edition = "2021"

[dependencies]
blake2 = "0.10.6"
clap = { version = "4.5.20", features = ["cargo", "derive"] }
clap_complete = "4.5.35"
dirs = "5.0.1"
exec = "0.3.1"
anyhow = "1.0.89"
thiserror = "1.0.64"
hex = "0.4.3"
ketos = "0.12"
ketos_derive = "0.12"
libc = "0.2.48"
path-clean = "1.0.1"
regex = "1.11.0"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
shell-escape = "0.1.4"
shellexpand = "3.1.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
ed25519 = "2.2.3"
rand = "0.8.5"

[build-dependencies]
clap = { version = "4.5.20", features = ["cargo", "derive"] }
clap_complete = "4.5.35"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tempfile = "3.13.0"
